example/lib/src/l10n/errors/app_kk.arb
{
  "@@locale": "kk",
  "error": "Қате орын алды",
  "@error": {
    "description": "Ошибка"
  },
  "unexpectedError": "Күтпеген қате орын алды",
  "@unexpectedError": {
    "description": "Произошла какая то ошибка"
  },
  "bugReportSentText": "Баг туралы есеп сәтті жіберілді.",
  "@bugReportSentText": {
    "description": "Сообщение об успешной отправке баг репорта"
  }
}